[package]
name = "https-everywhere-lib-wasm"
version = "0.1.0"
authors = ["William Budington <bill@eff.org>"]
edition = "2018"
description = "HTTPS Everywhere WASM Library"
license = "LGPL-2.1-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.20"
https-everywhere-lib-core = { version = "0.1.0", path = "lib-core", default_features = false, features = ["potentially_applicable"] }

[dev-dependencies]
wasm-bindgen-test = "0.2"
matches = "0.1.8"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
