[package]
name = "https-everywhere-lib-wasm"
version = "0.1.3"
authors = ["William Budington <bill@eff.org>"]
edition = "2018"
description = "HTTPS Everywhere WASM Library"
license = "LGPL-2.1-or-later"
repository = "https://github.com/efforg/https-everywhere-lib-wasm"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
log = "0.4"
wasm-bindgen-console-logger = "0.1"
bloomfilter = "1.0"
console_error_panic_hook = "0.1"
https-everywhere-lib-core = { version = "0.1.2", path = "lib-core", default_features = false, features = ["potentially_applicable", "get_simple_rules_ending_with"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
matches = "0.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
